Fix lists on iOS

--- a/_sass/essay.scss
+++ b/_sass/essay.scss
@@ -162,13 +162,14 @@
       &:not(.task-list) {
         // Begin fix for browsers that don't support list-style-type: <string>
         list-style-type: none;
-        padding-left: 0;
+        padding-left: 0.9em;
         li {
-          padding-left: 0;
-          display: flex;
+          padding-left: 0.5em;
+          position: relative;
           &:before {
             content: '•';
-            padding-right: 1em;
+            position: absolute;
+            left: -1em;
           }
         }
         // End fix
